# web/docs/swagger.json
@@ -25,6 +25,12 @@
                                 "$ref": "#/definitions/main.Student"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
+                        }
                     }
                 }
             },
@@ -50,10 +56,22 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/main.Student"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
                         }
                     }
                 }
@@ -72,7 +90,7 @@
                 "operationId": "get-student",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Student ID",
                         "name": "student_id",
                         "in": "path",
@@ -84,6 +102,18 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/main.Student"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
                         }
                     }
                 }
@@ -100,11 +130,20 @@
                 "operationId": "edit-student",
                 "parameters": [
                     {
-                        "type": "integer",
+                        "type": "string",
                         "description": "Student ID",
                         "name": "student_id",
                         "in": "path",
                         "required": true
+                    },
+                    {
+                        "description": "Edit Student",
+                        "name": "Student",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.Student"
+                        }
                     }
                 ],
                 "responses": {
@@ -113,12 +152,32 @@
                         "schema": {
                             "$ref": "#/definitions/main.Student"
                         }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/main.Error"
+                        }
                     }
                 }
             }
         }
     },
     "definitions": {
+        "main.Error": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
+                }
+            }
+        },
         "main.Student": {
             "type": "object",
             "properties": {
